# vector-search

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
src/vector_search/: __init__.py  augmentation.py  chunker.py  config.py  database.py  embeddings.py  sources.py  tags.py  vector_search.py
tests/: generate_token.py  test_augmentation.py  test_chunkers.py  test_database.py  test_drive.py  test_embeddings.py  test_sources.py  test_tags.py  test_vector_search.py  test_workflow.py
